# fdbcli-next

./: Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: build-linux.yml
src/: lib.rs  utils.rs
