[package]
name = "fdbcli-next"
version = "0.1.8"
edition = "2024"
rust-version = "1.89.0"

authors = ["Pranav Joglekar", "Snm Maurya <xsmmaurya@gmail.com>"]
description = "Next generation of fdbcli with better support for layers e.g directory layer"
documentation = "https://github.com/Pranav2612000/fdbcli-next"
homepage = "https://github.com/Pranav2612000/fdbcli-next"
repository = "https://github.com/Pranav2612000/fdbcli-next"
readme = "README.md"
license = "MIT"

keywords = ["foundationdb", "fdb", "tuple", "cli", "database"]
categories = [
    "database",
    "command-line-utilities",
    "development-tools",
]

[lib]
name = "fdbcli_next"
path = "src/lib.rs"

[[bin]]
name = "fdbcli-next"
path = "src/bin/fdbcli-next.rs"

[dependencies]
foundationdb = { version = "0.10.0", features = ["embedded-fdb-include", "fdb-7_3"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
rustyline = { version = "17", features = ["with-file-history"] }
